# caro-service

./: Cargo.toml  README.md
caro-derive/: Cargo.toml
caro-service/: Cargo.toml
caro-service/examples/: service_macro_client.rs  service_macro_server.rs
caro-service/src/: lib.rs
caro-service/tests/: test_service_methods.rs  test_service_signals.rs  test_service_states.rs
karo-derive/: Cargo.toml
karo-derive/src/: lib.rs
karo-service/: Cargo.toml
karo-service/examples/: service_example.rs  service_macro_client.rs  service_macro_server.rs
karo-service/src/: lib.rs  method.rs  peer.rs  service.rs  signal.rs  state.rs
karo-service/tests/: test_service_methods.rs  test_service_signals.rs  test_service_states.rs
krossbar/: Cargo.toml
krossbar-derive/: Cargo.toml  README.md
krossbar-derive/src/: lib.rs
krossbar-service/: Cargo.toml  README.md
krossbar-service/examples/: service_example.rs
krossbar-service/src/: method.rs  signal.rs  state.rs
krossbar-service/tests/: test_service_states.rs
krossbar/examples/: service_macro_client.rs  service_macro_server.rs
krossbar/src/: lib.rs  peer.rs  service.rs
krossbar/tests/: test_service_methods.rs  test_service_signals.rs
