[package]
name = "karo-service"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
lazy_static = "1.4"
serde = "1.0"
tokio = { version = "1.19", features = ["sync"] }

karo-bus-lib = { git = "https://github.com/karo-platform/karo-bus.git" }
karo-bus-common = { git = "https://github.com/karo-platform/karo-bus.git" }
karo-derive = { path = "../karo-derive" }

[dev-dependencies]
log = "0.4"
pretty_env_logger = "0.4"
json = "0.12.4"
tempdir = "0.3.7"

karo-bus-hub = { git = "https://github.com/karo-platform/karo-bus.git" }
