[package]
name = "krossbar-service"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
authors = ["Alexander Smoktal <https://github.com/alexander-smoktal>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/krossbar-platform/krossbar-common"
homepage = "https://krossbar.rs"
description = """
Krossbar service library
"""
categories = ["network-programming"]
keywords = ["rpc", "service", "logging"]

[dependencies]
async-trait = "0.1"
lazy_static = "1.4"
serde = "1.0"
tokio = { version = "1.19", features = ["sync"] }

krossbar-bus-lib = { git = "https://github.com/krossbar-platform/krossbar-bus.git" }
krossbar-bus-common = { git = "https://github.com/krossbar-platform/krossbar-bus.git" }
krossbar-derive = { path = "../krossbar-derive" }

[dev-dependencies]
log = "0.4"
pretty_env_logger = "0.4"
json = "0.12.4"
tempdir = "0.3.7"

krossbar-bus-hub = { git = "https://github.com/krossbar-platform/krossbar-bus.git" }
